// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vouch views getKnownVouchesReceived fetches who viewer vouched for that vouched for receiver 1`] = `
Object {
  "receiver": Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-bob",
    "did": "user(4)",
    "displayName": "display-bob",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "vouchers": Array [
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-eve",
      "did": "user(0)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(2)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
}
`;

exports[`vouch views getVouchesIssued fetches vouches 1`] = `
Object {
  "cursor": "0000000000000__bafycid",
  "issuer": Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-alice",
    "did": "user(8)",
    "displayName": "display-alice",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "vouches": Array [
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-eve",
      "did": "user(0)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-dan",
      "did": "user(2)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(4)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-bob",
      "did": "user(6)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
}
`;

exports[`vouch views getVouchesReceived fetches vouchers 1`] = `
Object {
  "cursor": "0000000000000__bafycid",
  "receiver": Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-alice",
    "did": "user(4)",
    "displayName": "display-alice",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "vouchers": Array [
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(0)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-bob",
      "did": "user(2)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
}
`;

exports[`vouch views profile views profileViewDetailed shows verification level for verifier user 1`] = `
Object {
  "receiver": Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "description": "descript-bob",
    "did": "user(4)",
    "displayName": "display-bob",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "vouchers": Array [
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-eve",
      "did": "user(0)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "descript-carol",
      "did": "user(2)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
  ],
}
`;
